# agentflow-article-publishing

./: .gitignore  CCREVIEW_HANDOFF.md  CHANGELOG.md  INSTALL.md  README.md  social-content-review-skill-proposal.md
backend/: .env.template  pyproject.toml  requirements.txt  test_tiktok_url.txt
backend/agentflow/: __init__.py
backend/agentflow/agent_d0/: __init__.py  aggregator.py  corpus.py  extractor.py  handle_fetcher.py  keyword_extractor.py  main.py  per_article_analyzer.py
backend/agentflow/agent_d1/: __init__.py  clustering.py  hn_algolia.py  main.py  scoring.py  search.py  topic_fit.py  viewpoint_miner.py
backend/agentflow/agent_d2/: __init__.py  brand_overlay.py  compliance_checker.py  image_auto_resolver.py  image_generator.py  image_proposer.py  interactive_editor.py  main.py  (+6 more)
backend/prompts/: d0_style_aggregate.md  d0_style_learn_per_article.md  d1_viewpoint_mining.md  d2_edit_meta.md  d2_full_rewrite.md  d2_image_proposal.md  d2_interactive_edit.md  d2_paragraph_filling.md  d2_skeleton_generation.md  d2_structure_audit.md  d3_platform_adapt.md  email_newsletter.md  twitter_draft.md
backend/tests/: test_auth_lark_operators.py  test_e2e_lark_pure.py  test_l2_profile_yaml_writeback.py  test_l3_chrome_defer_wiring.py  test_l4_auth_migration.py  test_l5_doctor_no_tg.py  test_lark_audit_list.py  test_lark_callback.py  test_lark_chrome_intents.py  test_lark_profile_advance.py  test_lark_schema_dual_track.py  test_lark_suggestions.py  test_no_tg_runtime.py  test_profile_session_lark_schema.py  test_v02_workflows.py
lark-adapter/: README.md  pyproject.toml
lark-adapter/lark_adapter/: __init__.py  app.py  callback_bridge.py  card_meta.py  config.py  lark_client.py  routes_card.py  routes_event.py  routes_health.py  security.py
lark-adapter/tests/: conftest.py  test_routes.py  test_security.py
(+218 files in other folders)
